Bug 1248380 - Wrap long lines in Raw Data view. r=Honza
UltraBlame original commit: b7ab577515658d9acbc974e3a200f872aa93d20e

--- a/devtools/client/jsonview/css/text-panel.css
+++ b/devtools/client/jsonview/css/text-panel.css
@@ -9,26 +9,19 @@ height
 }
 .
 textPanelBox
-.
-data
-{
-overflow
-:
-auto
-;
-height
-:
-100
-%
-;
-}
-.
-textPanelBox
 pre
 {
 margin
 :
-0
+8px
+;
+white
+-
+space
+:
+pre
+-
+wrap
 ;
 font
 -
